--- a/main.css
+++ b/main.css
@@ -8,12 +8,12 @@
 
 h1{
 	font: bold;
-	line-height: 35px;
+	line-height: 34px;
 	color: white;
 }
 
 h2{
-	font: bold 27px Tahoma; 	
+	font: bold 28px Tahoma; 	
 }
 
 body{
@@ -42,7 +42,7 @@ body{
 }
 
 #mainhead:hover{
-	transform:  scale(1.15);
+	transform:  scale(1.17);
 }
 
 #menu{
@@ -60,7 +60,9 @@ body{
 }
 
 #one:hover{
-	transform: scale(1.3) rotate(-10deg);
+	transform: scale(1.3) rotate(-10deg);A simple website created using HTML5 and CSS3, in an attempt to learn the front end framework.
+
+
 }
 #two:hover{
 	transform: scale(1.3) rotate(-10deg);
@@ -87,7 +89,9 @@ body{
 	color: white;
 	margin: 5px 10px;
 	padding: 10px;
-}
+}A simple website created using HTML5 and CSS3, in an attempt to learn the front end framework.
+
+
 
 .flash:hover{
 	transition: all 0.8s;
